WIP #13 - API owners can manage subscriptions

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -672,5 +672,12 @@
     "out": "out",
     "ms. average duration": "ms. average duration",
     "ms. average overhead": "ms. average overhead",
-    "Duplicate plan": "Duplicate plan"
+    "Duplicate plan": "Duplicate plan",
+    "Api subscriptions": "Api subscriptions",
+    "Result": {
+        "s": "Result",
+        "p": "Results"
+    },
+    "Show.results": "Show %s",
+    "Update metadata": "Update metadata"
 }
