WIP #116 - new metadata type for plan

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -679,5 +679,6 @@
         "p": "Results"
     },
     "Show.results": "Show %s",
-    "Update metadata": "Update metadata"
+    "Update metadata": "Update metadata",
+    "sub.process.update.to.manual": "Due to your choice, the subscription process has been set automatically to Manual"
 }
