--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
     "moment.locale": "en",
     "moment.date.format": "YYYY, MMM. Do to HH:mm z",
-    "moment.date.format.short":"YYYY/MM/DD",
+    "moment.date.format.short": "YYYY/MM/DD",
     "your teams": "Your teams",
     "find team": "Find a team",
     "My profile": "My profile",
@@ -122,19 +122,19 @@
     "subscription.plan.accepted": "Subscription to plan %s for team %s is accepted",
     "subscription.plan.waiting": "Subscription to plan %s for team %s is waiting for acceptation",
     "Description": "Description",
-    "Plan" : {
+    "Plan": {
         "s": "Plan",
         "p": "Plans"
     },
-    "Documentation":  "Documentation",
+    "Documentation": "Documentation",
     "Api Reference": "Api Reference",
     "Try it !": "Try it !",
     "Api by": "Api by",
     "Version": "Version",
-    "Supported versions":"Supported versions",
+    "Supported versions": "Supported versions",
     "Tags": "Tags",
-    "Visibility":"Visibility",
-    "Default pricing":"Default pricing",
+    "Visibility": "Visibility",
+    "Default pricing": "Default pricing",
     "Last modification": "Last modification",
     "View your api keys": "View your api keys",
     "Request in progress": "Request in progress",
@@ -152,9 +152,9 @@
     "Loading page ...": "Loading page ...",
     "Previous page": "Previous page",
     "Next page": "Next page",
-    "Create a new team":"Create a new team",
+    "Create a new team": "Create a new team",
     "Find a team": "Find a team",
-    "Delete team":  "Delete team",
+    "Delete team": "Delete team",
     "Edit team": "Edit team",
     "Type": {
         "s": "Type",
@@ -288,7 +288,7 @@
     "Name field name": "Name field name",
     "Email field name": "Email field name",
     "URL of the OIDC config": "URL of the OIDC config",
-    "Get from OIDC config 2": "Get from OIDC config 2", 
+    "Get from OIDC config 2": "Get from OIDC config 2",
     "Use JSON payloads": "Use JSON payloads",
     "Read profile from JWT token": "Read profile from JWT token",
     "Token scope": "Token scope",
@@ -337,7 +337,7 @@
     "Delete": "Delete",
     "Cancel": "Cancel",
     "Impersonator": "Impersonator",
-    "Created at":"Created at",
+    "Created at": "Created at",
     "Expires": "Expires",
     "destroy.session.confirm": "Are you sure you want to destroy this session ?",
     "destroy.all.sessions.confirm": "Are you sure you want to destroy all sessions including yours ?",
@@ -352,7 +352,7 @@
     "delete.api.confirm": "Are you sure you want to delete this api ?",
     "deletion successful": "deletion successful",
     "No API": "No API",
-    "View this Api":  "View this Api",
+    "View this Api": "View this Api",
     "New api": "New api",
     "Informations": "Informations",
     "Otoroshi": "Otoroshi",
@@ -473,7 +473,7 @@
     "Copy credentials": "Copy credentials",
     "Credientials copied": "Credientials copied",
     "Search your apiKey...": "Search your apiKey...",
-    "Api keys for":  "Api keys for",
+    "Api keys for": "Api keys for",
     "team.members.title": "%s members",
     "Add new member to the team ...": "Add new member to the team ...",
     "Api keys are just visible by admins": "Api keys are just visible by admins",
@@ -532,7 +532,7 @@
     "api.creation.title.modal": "Select the team for which to create new api",
     "api.creation.description.modal": "You are going to create an api. For which team do you want to create it ?",
     "Set font family from asset": "Set font family from asset",
-    "Public":  "Public",
+    "Public": "Public",
     "Private": "Private",
     "PublicWithAuthorizations": "Public With Authorizations",
     "Automatic": "Automatic",
@@ -631,7 +631,7 @@
     "Api team": "Api team",
     "Api imported": "Apis to import",
     "Apikey imported": "Apikeys to import",
-    "Import" : "Import this api",
+    "Import": "Import this api",
     "Update": "Update",
     "Create apis": "Create apis",
     "Create subscriptions": "Create subscriptions",
@@ -680,5 +680,17 @@
     },
     "Show.results": "Show %s",
     "Update metadata": "Update metadata",
-    "sub.process.update.to.manual": "Due to your choice, the subscription process has been set automatically to Manual"
+    "sub.process.update.to.manual": "Due to your choice, the subscription process has been set automatically to Manual",
+    "Automatic API key metadata": "Automatic API key metadata",
+    "automatic.metadata.help": "Automatic metadata will be calculated on subscription acceptation",
+    "Custom Apikey metadata": "Custom Apikey metadata",
+    "custom.metadata.help": "custom metadata will have to be filled during subscription validation. Subscription process will be switched to manual",
+    "array.input.placeholder": "Type something and press enter...",
+    "Subscription metadata": "Subscription metadata",
+    "Subscription metadata title": "Subscription metadata - %s",
+    "subscription.metadata.modal.creation.description": "%s ask you an apikey for plan %s",
+    "subscription.metadata.modal.update.description": "Team: %s - Plan: %s",
+    "mandatory.metadata.label": "Mandatory metadata (%s)",
+    "Additional metadata": "Additional metadata"
+    
 }
