--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -680,5 +680,16 @@
   },
   "Show.results": "Afficher %s",
   "Update metadata": "Mettre à jour les métadonnées",
-  "sub.process.update.to.manual": "En raison de votre choix, le processus de souscription a été automatiquement réglé sur Manuel"
+  "sub.process.update.to.manual": "En raison de votre choix, le processus de souscription a été automatiquement réglé sur Manuel",
+  "Automatic API key metadata": "Métadonnées automatiques",
+  "automatic.metadata.help": "Les métadonnées automatiques seront calculées à l'acceptation de la souscription",
+  "Custom Apikey metadata": "Métadonnées personnalisées",
+  "custom.metadata.help": "Les Métadonnées personnalisées devront être renseignées lors de la validation de la souscription. Le process de souscription sera basculé sur manuel",
+  "array.input.placeholder": "Saisir quelque chose et appuyer sur entrée/tab",
+  "Subscription metadata": "Métadonnées de souscription",
+  "Subscription metadata title": "Métadonnées de souscription - %s",
+  "subscription.metadata.modal.creation.description": "%s a demandé une clé d'api pour le plan %s",
+  "subscription.metadata.modal.update.description": "Équipe: %s - Plan: %s",
+  "mandatory.metadata.label": "Métadonnées obligatoires (%s)",
+  "Additional metadata": "Métadonnées additionelles"
 }
