--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -691,5 +691,6 @@
   "subscription.metadata.modal.creation.description": "%s a demandé une clé d'api pour le plan %s",
   "subscription.metadata.modal.update.description": "Équipe: %s - Plan: %s",
   "mandatory.metadata.label": "Métadonnées obligatoires (%s)",
-  "Additional metadata": "Métadonnées additionelles"
+  "Additional metadata": "Métadonnées additionelles",
+  "create.metadata.option.label": "Créer l'option %s"
 }
