--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -900,5 +900,8 @@
   "smtp_client.port": "Le port du serveur SMTP",
   "send_grid.api_key": "Api Key",
   "send_grid.from_email": "Email de l'expéditeur",
-  "audittrail.export.label": "Exporter la piste d'audit"
+  "audittrail.export.label": "Exporter la piste d'audit",
+  "Authorized entities": "Authorized entities",
+  "Authorized.entities.placeholder": "Selectionnez les service groupes de services et/ou les services Otoroshi",
+  "authorized.entities.help": "Selectionnez les service groupes de services et/ou les services Otoroshi pour lesquels la clé d'API sera authorizée d'y accéder"
 }
