--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -160,7 +160,7 @@
         "s": "Type",
         "p": "Types"
     },
-    "Team contact": "Team contat",
+    "Team contact": "Team contact",
     "Team avatar": "Team avatar",
     "Metadata": "Metadata",
     "Set avatar from asset": "Set avatar from asset",
