--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -695,5 +695,6 @@
   "create.metadata.option.label": "Créer l'option %s",
   "Team apis": "APIs d'équipe",
   "notif.apikey.refresh": "votre souscription %s (%s/%s) a été mise à jour.",
-  "Apikey refresh": "Mise à jour d'une clé d'API"
+  "Apikey refresh": "Mise à jour d'une clé d'API",
+  "Load previous messages": "Messages précédents"
 }
