--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -696,5 +696,6 @@
   "Team apis": "APIs d'équipe",
   "notif.apikey.refresh": "votre souscription %s (%s/%s) a été mise à jour.",
   "Apikey refresh": "Mise à jour d'une clé d'API",
-  "Load previous messages": "Messages précédents"
+  "Load previous messages": "Messages précédents",
+  "Start new conversation": "Démarrer une nouvelle "
 }
