--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -697,5 +697,11 @@
     "notif.apikey.refresh": "Your subscription %s (%s/%s) has been refreshed.",
     "Apikey refresh": "Apikey refresh",
     "Load previous messages": "Load previous messages",
-    "Start new conversation": "Start new conversation"
+    "Start new conversation": "Start new conversation",
+    "moment.duration.seconds": "%s sec",
+    "moment.duration.minutes": "%s min",
+    "moment.duration.days": "%s d",
+    "moment.duration.weeks": "%s w",
+    "moment.duration.months": "%s m",
+    "moment.duration.years": "%s y"
 }
