Add sender name in admin message page & FIX UI

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -703,5 +703,6 @@
     "moment.duration.days": "%s d",
     "moment.duration.weeks": "%s w",
     "moment.duration.months": "%s m",
-    "moment.duration.years": "%s y"
+    "moment.duration.years": "%s y",
+    "Unknown user": "Unknown user"
 }
