--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -698,7 +698,7 @@
   "Apikey refresh": "Mise à jour d'une clé d'API",
   "Load previous messages": "Messages précédents",
   "Start new conversation": "Démarrer une nouvelle ",
-  "moment.duration.seconds": "%s sec",
+  "moment.duration.seconds": "quelques sec",
   "moment.duration.minutes": "%s min",
   "moment.duration.days": "%s j",
   "moment.duration.weeks": "%s sem",
