--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -160,7 +160,7 @@
         "s": "Type",
         "p": "Types"
     },
-    "Team contact": "Team contat",
+    "Team contact": "Team contact",
     "Team avatar": "Team avatar",
     "Metadata": "Metadata",
     "Set avatar from asset": "Set avatar from asset",
@@ -695,5 +695,14 @@
     "create.metadata.option.label": "Create option %s",
     "Team apis": "Team APIs",
     "notif.apikey.refresh": "Your subscription %s (%s/%s) has been refreshed.",
-    "Apikey refresh": "Apikey refresh"
+    "Apikey refresh": "Apikey refresh",
+    "Load previous messages": "Load previous messages",
+    "Start new conversation": "New conversation",
+    "moment.duration.seconds": "few sec",
+    "moment.duration.minutes": "%s min",
+    "moment.duration.days": "%s d",
+    "moment.duration.weeks": "%s w",
+    "moment.duration.months": "%s m",
+    "moment.duration.years": "%s y",
+    "Unknown user": "Unknown user"
 }
