--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -705,5 +705,9 @@
   "moment.duration.months": "%s m",
   "moment.duration.years": "%s a",
   "Unknown user": "Utilisateur inconnu",
-  "European server": "Serveur européen"
+  "European server": "Serveur européen",
+  "API creation security": "Sécurité de création d'API",
+  "creation.security.help": "si activé, seules les équipes authorisées pourront créer des APis",
+  "APIs creation permission": "Autorisation de création d'APIs",
+  "apisCreationPermission.help": "Si la sécurité de création d'API est activée pour l'oragnisation, l'autorisation de création d'API est obligatoire pour créer des APIs"
 }
