--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -709,5 +709,6 @@
   "API creation security": "Sécurité de création d'API",
   "creation.security.help": "si activé, seules les équipes authorisées pourront créer des APis",
   "APIs creation permission": "Autorisation de création d'APIs",
-  "apisCreationPermission.help": "Si la sécurité de création d'API est activée pour l'oragnisation, l'autorisation de création d'API est obligatoire pour créer des APIs"
+  "apisCreationPermission.help": "Si la sécurité de création d'API est activée pour l'oragnisation, l'autorisation de création d'API est obligatoire pour créer des APIs",
+  "image url from asset": "URL d'une image depuis les assets"
 }
