--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -717,5 +717,6 @@
     },
     "permission.caption.administrator": "an Administrator can manage team members, update team and read billing",
     "permission.caption.apiEditor": "a Api Editor can create/update/delete APIs and read incomes",
-    "permission.caption.user": "a User can read team api keys"
+    "permission.caption.user": "a User can read team api keys",
+    "Team forbidden to create api on current tenant": "Team forbidden to create API on current tenant"
 }
