--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -601,7 +601,10 @@
   "Contact us": "Contactez-nous",
   "Contact request": "Demande de contact",
   "Subject": "Objet",
-  "Message": "Message",
+  "Message": {
+    "s": "Message",
+    "p": "Messages"
+  },
   "Enter your name": "Renseigner votre nom",
   "Enter email": "Renseigner votre courriel",
   "Your message": "Votre message",
@@ -718,5 +721,6 @@
   "permission.caption.administrator": "un Administrateur peut gérer les  membres de l'équipe, modifier l'équipe et consulter la facturation",
   "permission.caption.apiEditor": "un Rédacteur d'API peu créer/modifier/supprimer des APIs et consulter les revenues",
   "permission.caption.user": "un Utilisateur peut consulter les cles API",
-  "Team forbidden to create api on current tenant": "Équipe interdite de créer une API sur l'organisation actuel"
+  "Team forbidden to create api on current tenant": "Équipe interdite de créer une API sur l'organisation actuel",
+  "Default message": "Message par défaut"
 }
