--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -119,8 +119,8 @@
   "PayPerUse": "Paiement à l'usage",
   "Error": "Erreur",
   "Done": "Terminé",
-  "subscription.plan.accepted": "La souscription au plan %s pour l'équipe %s est accepté",
-  "subscription.plan.waiting": "La souscription au plan %s pour l'équipe %s est en attente de validation",
+  "subscription.plan.accepted": "La clé d'API pour le plan %s et l'équipe %s est disponible",
+  "subscription.plan.waiting": "La demande de clé d'API au plan %s pour l'équipe %s est en attente de validation",
   "Description": "Description",
   "Plan": {
     "s": "Plan",
@@ -137,11 +137,12 @@
   "Default pricing": "Tarification par défaut",
   "Last modification": "Dernière modification",
   "View your api keys": "Voir vos clés d'api",
-  "Request in progress": "Request in progress",
+  "Request in progress": "Demande en cours",
   "api not linked": "Cette api n'est pas encore liée à un service Otoroshi.",
   "Subscribe": "Souscrire",
-  "team.selection.title": "Sélectionner une équipe pour souscrire",
-  "team.selection.desc": "Vous êtes en train de souscrire à une api. Pour quelles équipes souhaitez-vous souscrire ?",
+  "team.selection.title": "Sélectionner une ou des équipes",
+  "team.selection.desc.get": "Vous allez obtenir une ou plusieurs clés API. Pour quelles équipes les voulez-vous?",
+  "team.selection.desc.request": "Vous allez demander une ou plusieurs clés API. Pour quelles équipes les voulez-vous?",
   "teamapi.select.title": "Choisissez une équipe pour laquelle voir vos clés d'api",
   "free.without.quotas.desc": "Vous ne payez  rien et faites ce que vous voulez :)",
   "free.with.quotas.desc": "Vous ne payez rien mais vous n'avez que %s requêtes autorisées par mois",
@@ -722,5 +723,13 @@
   "permission.caption.apiEditor": "un Rédacteur d'API peu créer/modifier/supprimer des APIs et consulter les revenues",
   "permission.caption.user": "un Utilisateur peut consulter les cles API",
   "Team forbidden to create api on current tenant": "Équipe interdite de créer une API sur l'organisation actuel",
-  "Default message": "Message par défaut"
+  "Default message": "Message par défaut",
+  "plan.limits": "Limites : %s appels/sec, %s appels/mois",
+  "plan.limits.unlimited": "Limites : appels illimités",
+  "plan.pricing": "Tarif : %s",
+  "req.": "appels",
+  "month": "mois",
+  "Free": "Gratuit",
+  "Get API key": "Obtenir une clé d'API",
+  "Request API key": "Demander une clé d'API"
 }
