--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -119,8 +119,8 @@
     "PayPerUse": "Pay per use",
     "Error": "Error",
     "Done": "Done",
-    "subscription.plan.accepted": "Subscription to plan %s for team %s is accepted",
-    "subscription.plan.waiting": "Subscription to plan %s for team %s is waiting for acceptation",
+    "subscription.plan.accepted": "API key to plan %s for team %s is available",
+    "subscription.plan.waiting": "The API key request for %s plan and the team %s is pending acceptance",
     "Description": "Description",
     "Plan": {
         "s": "Plan",
@@ -140,8 +140,9 @@
     "Request in progress": "Request in progress",
     "api not linked": "This api is not linked to an actual Otoroshi service yet",
     "Subscribe": "Subscribe",
-    "team.selection.title": "Select the team of the subscription",
-    "team.selection.desc": "You are going to subscribe to the api. On which team do you want to make this subscriptions ?",
+    "team.selection.title": "Select teams",
+    "team.selection.desc.get": "You are going to get one or more API keys. On which teams do you want them for?'",
+    "team.selection.desc.request": "You are going to request one or more API keys. On which teams do you want them for?'",
     "teamapi.select.title": "Select the team to view your api key(s)",
     "free.without.quotas.desc": "You'll pay nothing and do whatever you want :)",
     "free.with.quotas.desc": "You'll pay nothing but you'll have %s authorized requests per month",
@@ -722,5 +723,13 @@
     "permission.caption.apiEditor": "a Api Editor can create/update/delete APIs and read incomes",
     "permission.caption.user": "a User can read team api keys",
     "Team forbidden to create api on current tenant": "Team forbidden to create API on current tenant",
-    "Default message": "Default message"
+    "Default message": "Default message",
+    "plan.limits": "Quotas: %s req./sec, %s req./month",
+    "plan.limits.unlimited": "Quotas: unlimited calls",
+    "plan.pricing": "Pricing: %s",
+    "req.": "req.",
+    "month": "month",
+    "Free": "Free",
+    "Get API key": "Get API key",
+    "Request API key": "Request API key"
 }
